Stopped top row from shifting in compact view

--- a/public/style.scss
+++ b/public/style.scss
@@ -285,7 +285,7 @@ a.block-link:hover {
     display: none;
   }
 
-  .row {
+  .row:not(.check-list-header) {
     padding-top: 20px;
     padding-bottom: 10px;
   }
